--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -28,12 +28,6 @@
     <script type="text/javascript" src="/javascripts/blmBind.js"></script>
     <script type="text/javascript" src="/javascripts/jquery.js"></script>
 
-    <!--1-->
-    <!--<link rel="stylesheet" href="http://www.jq22.com/jquery/font-awesome.4.6.0.css">-->
-    <!--<link href="/stylesheets/datePicker/foundation.min.css" rel="stylesheet" type="text/css">-->
-    <!--<link href="/stylesheets/datePicker/foundation-datepicker.min.css" rel="stylesheet" type="text/css">-->
-    <!--2-->
-
 </head>
 <body style="overflow:hidden;">
 <div id="map" class="map" tabindex="0" ></div>
@@ -416,10 +410,12 @@
     <!--航线信息设置-->
     <div class="routeInfo_Install">
         <ul class="routeInfo_List">
-            <li>DWT: <input type="text"></li>
-            <li>LOA: <input type="text"></li>
-            <li>BM: <input type="text"></li>
-            <li>DM: <input type="text"></li>
+            <li>吨位: <input type="text"></li>
+            <li>吃水: <input type="text"></li>
+            <li>最大船龄: <input type="text"></li>
+            <!--<li>LOA: <input type="text"></li>-->
+            <!--<li>BM: <input type="text"></li>-->
+            <!--<li>DM: <input type="text"></li>-->
             <li>装载港: </li>
             <li>装载等待时长: <input type="text"></li>
             <li>DTPH: <input type="text"></li>
