--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -416,12 +416,14 @@
             <!--<li>LOA: <input type="text"></li>-->
             <!--<li>BM: <input type="text"></li>-->
             <!--<li>DM: <input type="text"></li>-->
-            <li>装载港: </li>
-            <li>装载等待时长: <input type="text"></li>
+            <li>装港: </li>
+            <li>等待时长: <input type="text"></li>
+            <li>TPH: <input type="text"></li>
             <li>DTPH: <input type="text"></li>
             <li>SHInc: <input type="checkbox" name="SHInc" checked=true></li>
-            <li>卸载港: </li>
-            <li>卸载等待时长: <input type="text"></li>
+            <li>卸港: </li>
+            <li>等待时长: <input type="text"></li>
+            <li>TPH: <input type="text"></li>
             <li>DTPH: <input type="text"></li>
             <li>SHInc: <input type="checkbox" name="SHInc" checked=true></li>
         </ul>
