--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -183,17 +183,17 @@
             <div class="timeLine_List">
                 <div class="timeLine_Axle"></div>
                 <ul class="TimePointList">
-                    <li><span>20171</span><i></i></li>
-                    <li><span>20172</span><i></i></li>
-                    <li><span>20173</span><i></i></li>
-                    <li><span>20174</span><i></i></li>
-                    <li><span>20175</span><i></i></li>
-                    <li><span>20176</span><i></i></li>
-                    <li><span>20178</span><i></i></li>
-                    <li><span>20179</span><i></i></li>
-                    <li><span>201710</span><i></i></li>
-                    <li><span>201711</span><i></i></li>
-                    <li><span>201712</span><i></i></li>
+                    <!--<li><span>20171</span><i></i></li>-->
+                    <!--<li><span>20172</span><i></i></li>-->
+                    <!--<li><span>20173</span><i></i></li>-->
+                    <!--<li><span>20174</span><i></i></li>-->
+                    <!--<li><span>20175</span><i></i></li>-->
+                    <!--<li><span>20176</span><i></i></li>-->
+                    <!--<li><span>20178</span><i></i></li>-->
+                    <!--<li><span>20179</span><i></i></li>-->
+                    <!--<li><span>201710</span><i></i></li>-->
+                    <!--<li><span>201711</span><i></i></li>-->
+                    <!--<li><span>201712</span><i></i></li>-->
                 </ul>
             </div>
             <div class="timeLine_RightBtn"></div>
@@ -214,8 +214,12 @@
     </div>
     <!--<div class="dividing_line"></div>-->
     <div class="fleetInfo_total">
+        <div class="fleetInfo_checkedNum">
+            <span>已确认:</span>
+            <span>0</span>
+        </div>
         <div class="fleetInfo_Num">
-            <span>船舶数量：</span>
+            <span>总船舶数量：</span>
             <span>0</span>
             <span class="fleet_TotalBtn fleet_AddBtn fleet_AddNumBtn"></span>
             <span class="fleet_TotalBtn fleet_LessBtn fleet_LessNumBtn"></span>
@@ -239,9 +243,10 @@
                 </ul>
             </div>
             <div class="search_status">
-                <!--状态: <input type="text" type="0" class="Search_statusText Search_Text" disabled>-->
-                状态: <span type="1" class="Search_statusText">服役中</span>
+                状态: <input type="text" type="0" class="Search_statusText Search_Text" readonly>
+                <!--状态: <span type="1" class="hhhh">服役中</span>-->
                 <ul class="Search_statusSelect Search_Select">
+                    <li type="-1">All</li>
                     <li type="0">在建中</li>
                     <li type="1">服役中</li>
                     <li type="2">维修中</li>
@@ -326,7 +331,7 @@
     <div class="dividing_line"></div>
     <div class="shipInfo_fleet">
         <ul>
-            <li><span>船队: </span><span class="shipInfo_FleetName"></span>
+            <li><span>船队: </span><input type="text" id="shipInfo_FleetName" readonly>
                 <ul class="shipInfo_FleetList">
                     <li FleetNumber=></li>
                     <li FleetNumber="F1">Capesize</li>
@@ -346,7 +351,7 @@
             </li>
             <li class="shipInfo_Time"><span>进入时间: </span><input id="shipInfo_EnterTime" size="12" readonly/></li>
             <li class="shipInfo_Time"><span>离开时间: </span><input id="shipInfo_LeaveTime" size="12" readonly/></li>
-            <li><span>备注:</span><textarea class = "remarks"></textarea></li>
+            <li><div>备注:</div><textarea class = "remarks"></textarea></li>
 
         </ul>
         <div class="shipInfo_updateBtn">保存</div>
