--- a/public/stylesheets/standardRoute.css
+++ b/public/stylesheets/standardRoute.css
@@ -66,8 +66,31 @@
 .routeInstall_Btn>div:active{background:#217BA2;}
 
 
+/*期租航线弹出框样式*/
+#LeaseRouteInfo{width:420px;height:422px;position:fixed;z-index:100;top:70px;left:300px;border-radius: 10px;background: rgba(6, 2, 5, 0.8);display:none;}
+/*信息管理*/
+.LeaseRouteInfo_Install{width:96%;height:154px;margin:5px auto;}
+.LeaseRouteInfo_List{padding-top:1px;}
+.LeaseRouteInfo_List>li{display:inline-block;width:115px;min-width:110px;height:22px;font-size:13px;color:#fff;margin:0px 7px 3px;padding-right:2px;}
+.LeaseRouteInfo_List>li>span{display:inline-block;height:22px;line-height:22px;}
+.LeaseRouteInfo_List>li>input{width:40px;height:16px;line-height:16px;padding-left:5px;border:1px solid #ccc;position:relative;top:-1px;background:transparent;color:#fff;border-radius:5px;}
+.LeaseRouteInfo_List>li:nth-child(1),.LeaseRouteInfo_List>li:nth-child(2){width:96%;min-width:96%;}
+.LeaseRouteInfo_List>li:nth-child(1)>input,.LeaseRouteInfo_List>li:nth-child(2)>input{border-color:transparent;width:300px;}
+.LeaseRouteInfo_List>li:nth-child(3)>input{width:40px;}
+.LeaseRouteInfo_List>li:nth-child(4)>input{width:50px;}
+.LeaseRouteInfo_List>li:nth-child(5)>input{width:50px;}
+.LeaseRouteInfo_List>li:nth-child(6){width:200px;}
+.LeaseRouteInfo_List>li:nth-child(6)>input{width:40px;}
 
 
+/*中英文说明*/
+.LeaseRouteDes{width:96%;margin:5px auto 2px;}
+.LeaseRouteDes>div{display:inline-block;width:196px;height:160px;font-size:14px;color:#fff;text-align:center;}
+.LeaseRouteDes>div>textarea{display:inline-block;width:96%;height:140px;font-size:13px;margin-left:5px;resize:none;overflow-y:scroll;}
+/*按钮操作*/
+.LeaseRouteInstall_Btn>div{display:inline-block;margin-top:10px;margin-left:84px;cursor:pointer;width:80px;height:30px;line-height:30px;text-align:center;background:#2EB1EA;border-radius:5px;color:#fff;font-size:14px;}
+.LeaseRouteInstall_Btn>div:hover{background:#00B7FF;}
+.LeaseRouteInstall_Btn>div:active{background:#217BA2;}
 
 
 
