--- a/views/testIndex.html
+++ b/views/testIndex.html
@@ -1573,12 +1573,12 @@
 
     //
 
-//    var exist_anch_style = new ol.style.Style({
-//        image: new ol.style.Icon({
-//            scale: 0.8,
-//            src: 'images/anchor.png'
-//        })
-//    });
+    var exist_anch_style = new ol.style.Style({
+        image: new ol.style.Icon({
+            scale: 0.8,
+            src: 'images/anchor.png'
+        })
+    });
 
 
 
